Changed font-szie on small devices in aboutsection and fixed background image on Apple's devices

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ body {
     padding-left: 4.5%;
     font-size: 1.5rem;
 }
+.navbar .navbar-brand:hover{
+    color:darkgrey;
+}
 
 .navbar .navbar-collapse {
     text-align: right;
@@ -85,6 +88,11 @@ body {
   }
 }
 
+@media only screen and (max-width: 992px) {
+  .landing-page {
+    background-attachment: scroll;
+  }
+}
 
 /*About us*/
 
@@ -92,11 +100,15 @@ body {
     
     padding-top:5%;
     padding-bottom: 5%;
-    font-size: 1.4em;
+    font-size: 1.4rem;
     line-height: 1.3;
     text-align: center;
-    
-    
+}
+
+@media only screen and (max-width: 600px) {
+  .container-about-us {
+    font-size: 1rem;
+  }
 }
 
 /* The gym */
